--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-compat:28.0.0'
     compile 'com.android.support:support-fragment:28.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
