--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/select_device"
             android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name="com.witsensor.ChartActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
